--- a/MyFirstApp/app/src/main/res/values-night/themes.xml
+++ b/MyFirstApp/app/src/main/res/values-night/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.MyFirstApp" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/blue_night</item>
+        <item name="colorAccent">@color/blue_light</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
